homelab/home-assistant/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: home-assistant
  nodeSelector:
    kubernetes.io/hostname: homelab
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: front-proxy
          image: valerauko/climbing:sha-623a47d
          ports:
            - name: http
              containerPort: 80
      tolerations:
        - key: valerauko.net/local
          effect: NoSchedule
          operator: Exists
