homelab/home-assistant/endpoint-slice.yml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
    app: home-assistant
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "100.115.141.93"
    conditions:
      ready: true
