homelab/home-assistant/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-ip: 100.115.141.93
    tailscale.com/proxy-group: tailscale-proxy
  name: home-assistant
spec:
  externalName: override
  type: ExternalName
  ports:
    - port: 8123
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-manual
spec:
  externalName: homeassistant.tail75ca7b.ts.net
  type: ExternalName
  ports:
    - port: 8123
      protocol: TCP
      name: http
