homelab/home-assistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    app: home-assistant
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: tailscale
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.dekiru.tech
      secretName: dekiru-tech-tls
  rules:
    - host: home.dekiru.tech
      http:
        paths:
          - backend:
              service:
                # the ExternalName Service doesn't seem to work as documented
                name: home-assistant-manual
                # name: ts-home-assistant-vq4vs
                port:
                  name: http
            path: /
            pathType: Prefix
